tests/errors.txt
Building xArchive
/Users/theuser/Code/dust3/dust/ios/App/App/AppDelegate.swift:8:1: error: expected 'func' keyword in instance method declaration
eee
^
func
/Users/theuser/Code/dust3/dust/ios/App/App/AppDelegate.swift:8:4: error: expected '(' in argument list of function declaration
eee
^
func
/Users/theuser/Code/dust3/dust/ios/App/App/AppDelegate.swift:8:1: error: expected 'func' keyword in instance method declaration
eee
^
func
/Users/theuser/Code/dust3/dust/ios/App/App/AppDelegate.swift:8:4: error: expected '(' in argument list of function declaration
eee
^
func


